# YERUN

./: BACKEND_SETUP.md  README.md  backend_api.py  package-lock.json  pose.py  pyproject.toml  references.bib  requirements.txt
Dislexia/: AI_in_Education.txt  Process.ipynb
Dislexia/my-frontend/: index.html  package-lock.json  package.json
Dislexia/my-frontend/src/: App.css  App.tsx
Dislexia/my-frontend/src/pages/: ADHDPage.tsx  AutismPage.tsx  DyslexiaPage.tsx  SignLanguagePage.css  SignLanguagePage.tsx
Dislexia/my-frontend/src/styles/: disability-page.css
Website/: .env.example  MIGRATION_COMPLETE.md  QUICK_START.md  README.md  SETUP.md  index.html  package-lock.json  package.json
Website/src/: App.css  App.tsx  index.css
Website/src/pages/: ADHDPage.tsx  AutismPage.tsx  DyslexiaPage.tsx  SignLanguagePage.css  SignLanguagePage.tsx
Website/src/styles/: disability-page.css  disability-subpages-old.css  disability-subpages.css
autism/: autism.py  speech.txt
text_openrouter_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
