[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_openrouter_project"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "httpx>=0.28.1",
  "ipykernel>=7.1",
  "requests>=2.32.0",
  "nltk>=3.9.0",
  "spacy>=3.6",
  "pandas>=2.1",
  "python-dotenv>=1.1",
  "tqdm>=4.67",
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "numpy>=1.24.0",
  "imageio>=2.31.0",
  "imageio-ffmpeg>=0.4.9",
  "Pillow>=10.0.0",
  "pose-format>=0.3.0",
  "PyPDF2>=3.0.0",
  "python-docx>=1.1.0",
  "opencv-python",
  "inflect>=7.0.0",
]

[tool.uv.workspace]
members = [
    "Dislexia/my-frontend/Dislexia/my-frontend/backend",
    "Dislexia/my-frontend/backend",
    "Dislexia/my-frontend/Dislexia",
]

[tool.setuptools]
packages = []
